feat: implement backend for creating portal navigation items.
